[tool.poetry]
name = "async-tkinter-loop"
version = "0.9.1"
description = "Asynchronous mainloop implementation for tkinter"
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/insolor/async-tkinter-loop"
repository = "https://github.com/insolor/async-tkinter-loop"
keywords = ["tkinter", "async", "async-await", "asyncio", "aiohttp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = {version = "^9.1.1", optional = true}
httpx = {version = ">=0.23.1,<0.25.0", optional = true}
customtkinter = {version = "^5.2.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.0.1"
flake8 = "^5.0.4"
black = "^23.3.0"
isort = "^5.11.5"
customtkinter = "^5.2.0"

[tool.poetry.extras]
examples = ["httpx", "Pillow", "customtkinter"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
