[project]
name = "async-tkinter-loop"
version = "0.10.2"
description = "Asynchronous mainloop implementation for tkinter"
authors = [{ name = "insolor", email = "insolor@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "tkinter",
    "async",
    "async-await",
    "asyncio",
    "aiohttp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["typing-extensions"]

[project.optional-dependencies]
examples = [
    "httpx>=0.23.1,<0.29.0",
    "Pillow>=10.3.0,<12.0.0",
    "customtkinter>=5.2.1,<6",
]

[project.urls]
Homepage = "https://github.com/insolor/async-tkinter-loop"
Repository = "https://github.com/insolor/async-tkinter-loop"
Documentation = "https://insolor.github.io/async-tkinter-loop/"

[dependency-groups]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<8.0",
    "pytest-timeout>=2.0.1,<3",
    "ruff>=0.14.1,<0.15",
    "customtkinter>=5.2.1,<6",
]
docs = [
    "mkdocs>=1.5.2,<2",
    "mkdocstrings[python]>=0.22,<0.31",
    "mkdocs-material>=9.2.5,<10",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
## For uv:
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  # Warning about docstrings are suppressed for now
    "ANN002",
    "ANN003",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN001",
    "ANN201",
    "ANN202",
    "D",  # Don't warn about missing documentation in tests
]

"examples/*" = [
    "ANN",
    "D",
    "S311",
    "PL",
    "INP001",
    "RUF006",
]

[tool.poetry.group.dev.dependencies]


