[tool.poetry]
name = "async-tkinter-loop"
version = "0.10.3"
description = "Asynchronous mainloop implementation for tkinter"
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/insolor/async-tkinter-loop"
repository = "https://github.com/insolor/async-tkinter-loop"
documentation = "https://insolor.github.io/async-tkinter-loop/"
keywords = ["tkinter", "async", "async-await", "asyncio", "aiohttp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = {version = ">=10.3.0,<13.0.0", optional = true}
httpx = {version = ">=0.23.1,<0.29.0", optional = true}
customtkinter = {version = "^5.2.1", optional = true}
typing-extensions = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<9.0"
pytest-cov = ">=4.1,<8.0"
pytest-timeout = "^2.0.1"
ruff = ">=0.4.7,<0.15.0"
customtkinter = "^5.2.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocstrings = {extras = ["python"], version = ">=0.22,<0.31"}
mkdocs-material = "^9.2.5"

[tool.poetry.extras]
examples = ["httpx", "Pillow", "customtkinter"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  # Warning about docstrings are suppressed for now
    "ANN002",
    "ANN003",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN001",
    "ANN201",
    "ANN202",
    "D",  # Don't warn about missing documentation in tests
]

"examples/*" = [
    "ANN",
    "D",
    "S311",
    "PL",
    "INP001",
    "RUF006",
]